--- a/style.css
+++ b/style.css
@@ -1,9 +1,22 @@
+ * {
+     padding: 0px;
+     margin: 0px;
+     box-sizing: border-box;
+ }
  
+ .slideshow-container {
+     width: 60%;
+     margin: auto;
+     /* overflow: hidden; */
+     border: 5px solid black;
+ }
  
- 
- 
- 
- 
+ .slideshow-slide {
+     display: flex;
+     width: 100%;
+     height: 500px;
+ }
+  
  
  
  
