--- a/style.css
+++ b/style.css
@@ -7,16 +7,37 @@
  .slideshow-container {
      width: 60%;
      margin: auto;
-     /* overflow: hidden; */
+     overflow: hidden;
      border: 5px solid black;
+     position: relative;
  }
  
  .slideshow-slide {
-     display: flex;
+     display: flex; 
      width: 100%;
      height: 500px;
  }
-  
+
+#prevButt {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    left: 5%;
+    font-size: 30px;
+    color: white;
+    opacity: 0.5;
+    cursor: pointer;
+ }
+#nextButt {
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    right: 5%;
+    font-size: 30px;
+    opacity: 0.5;
+    color: white;
+    cursor: pointer;
+  }
  
  
  
