--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
  }
  
  .slideshow-container {
-     width: 60%;
+     width: 350px;
+     height: 254px;
      margin: auto;
      overflow: hidden;
      border: 5px solid black;
@@ -15,7 +16,9 @@
  .slideshow-slide {
      display: flex; 
      width: 100%;
-     height: 500px;
+     height: 100%;
+     /* background-size: contain; */
+     background-position: center;
  }
 
 #prevButt {
