--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 100%;
+}
+
 body {
   background-color: black;
+  max-width: 100%;
 }
 
 .header {
@@ -90,4 +95,30 @@ body {
   opacity: 0.5;
   color: orange;
   cursor: pointer;
+}
+
+@media (min-width: 640px) {
+  body {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 960px) {
+  body {
+    font-size: 1.2rem;
+  }
+}
+@media (min-width: 1100px) {
+  body {
+    font-size: 1.5rem;
+  }
+}
+
+img {
+  max-width: 100%;
+}
+
+@media only screen and (max-width: 479px) {
+  body {
+    width: 100%;
+  }
 }
